# gtsam-ins-test

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.txt  install_conan_packages.sh  run.sh  setup_cmake.sh  setup_cmake_debug.sh
src/: BleBeacon.cpp  BleBeacon.hpp  FactorGraphOptimisation.cpp  FactorGraphOptimisation.hpp  SimulationData.cpp  SimulationData.hpp  main.cpp  utils.cpp  utils.hpp
